# ant-colony

./: CMakeLists.txt  README.md  SimulationFile.txt  main.cpp
lib/include/: Cell.h  DoodleBug.h  Grid.h  MatingAnts.h  Organisms.h  QueenAnts.h  Simulation.h  WorkerAnts.h
lib/src/: Cell.cpp  DoodleBug.cpp  Grid.cpp  MatingAnts.cpp  Organisms.cpp  QueenAnts.cpp  Simulation.cpp  WorkerAnts.cpp
